...
    <string name="on_with_defaults">On w/ defaults</string>
    <string name="off">Off</string>
    <string name="checkout_mode">Checkout Mode</string>
    <string name="payment">Pay</string>
    <string name="payment_with_setup">P &amp; S</string>
    <string name="setup">Setup</string>
    <string name="reload_paymentsheet">Reload PaymentSheet</string>
    <string name="payment_method">Payment Method</string>
    <string name="loading">Loading…</string>
    <string name="select">Select</string>
    <string name="checkout_custom">Checkout (Custom)</string>
    <string name="checkout_complete">Checkout (Complete)</string>
    <string name="add_shipping_address">Add Shipping Address</string>
    <string name="currency">Currency</string>
    <string name="default_billing_address">Default Billing Address</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="default_shipping_address">Default Shipping Address</string>
    <string name="shipping_address_phone">Shipping Address Phone</string>
...
