<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/stripe_paymentsheet_outer_spacing_top"
    android:orientation="vertical">

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/payment_methods_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="18dp"
        android:paddingBottom="6dp"
        android:visibility="gone" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/payment_method_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/stripe_paymentsheet_outer_spacing_horizontal"/>

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/link_inline_signup"
        android:visibility="gone"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_marginHorizontal="@dimen/stripe_paymentsheet_outer_spacing_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
