<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:orderInCategory="300"
        android:title="@android:string/ok"
        app:showAsAction="ifRoom" />
</menu>
